syntax = "proto3";

package api.v1;

import "common.proto";

option go_package = "github.com/yaanno/upload-store-process/proto/api/v1";

service ApiService {
    // Initiate file upload process
    rpc InitiateUpload(UploadRequest) returns (UploadResponse) {}
}

// Request to initiate file upload
message UploadRequest {
    string filename = 1;
    int64 file_size_bytes = 2;
}

// Response with upload details
message UploadResponse {
    common.v1.Response base_response = 1;
    string upload_id = 2;
    string storage_endpoint = 3;  // Where to upload the actual file
}
